--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.3.1"
   }
 }
